[tool.poetry]
name = "axobackend"
version = "0.1.0"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
fastapi = "^0.114.0"
motor = "^3.5.2"
pymongo = "^4.8.0"
pydantic = "^2.9.1"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"
option = "^2.1.0"
pyjwt = "^2.9.0"
humanfriendly = "^10.0"
python-multipart = "^0.0.9"


python-dotenv = "^1.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

requests = "^2.32.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
